Update: オブジェクトの構造を更新すること

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
+/.idea
 /build
+/third_party/nlohmann_json/nlohmann_json-build/
+/third_party/nlohmann_json/nlohmann_json-src/
+/third_party/nlohmann_json/nlohmann_json-tmp/
+/third_party/imgui/imgui-build/
+/third_party/imgui/imgui-src/
+/third_party/imgui/imgui-tmp/
+/third_party/sdl3/sdl3-build/
+/third_party/sdl3/sdl3-src/
+/third_party/sdl3/sdl3-tmp/
